--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,16 @@ a {
   box-sizing: border-box;
 }
 
+h1 {
+  font-family: var(--font-grotesk) sans-serif;
+}
+
+body {
+  padding: 100px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
